# osgmodeling

./: CMakeLists.txt
examples/osgmodelingbasic/: CMakeLists.txt
examples/osgmodelingboolean/: CMakeLists.txt  osgmodelingboolean.cpp
examples/osgmodelingbsptree/: CMakeLists.txt  osgmodelingbsptree.cpp
examples/osgmodelingnurbs/: CMakeLists.txt
examples/osgmodelingsubd/: CMakeLists.txt  osgmodelingsubd.cpp
include/osgModeling/: BoolOperator  Export  Model  ModelVisitor  NormalVisitor  PolyMesh  TexCoordVisitor
src/osgModeling/: BoolOperator.cpp  CMakeLists.txt  ModelVisitor.cpp  NormalVisitor.cpp  PolyMesh.cpp  TexCoordVisitor.cpp
src/osgPlugins/osgModeling/: CMakeLists.txt
